--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "dependencies": {
     "@docusaurus/core": "3.7.0",
     "@docusaurus/preset-classic": "3.7.0",
+    "@glidejs/glide": "^3.7.1",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
+    "glidejs": "^2.1.0",
     "pdfjs-dist": "^4.10.38",
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
